...
                }
            }
        }
        
        item {
            Text(
                text = "Account Settings",
                fontSize = 20.sp,
                fontWeight = FontWeight.Medium,
                color = MaterialTheme.colors.primary
            )
        }
        
...
